bases/org/envs/test/kustomization.yaml
resources:
  - netpol-runtime.yaml
  - netpol-sync.yaml
  - netpol-udca.yaml

namespace: apigee

commonLabels:
  env: test

namePrefix: netpol-
