bases/org/envs/test/netpol-udca.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: udca-authz
spec:
  podSelector:
    matchLabels:
      app: apigee-udca
  policyTypes:
    - Ingress
    - Egress
  ingress:
  - from: []
    ports:
    - protocol: TCP
      port: 7091     
  egress:
    - to: []
      ports:
      - protocol: TCP
        port: 443
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: udca-runtime
spec:
  podSelector:
    matchLabels:
      app: apigee-udca
  policyTypes:
    - Ingress
  ingress:
  - from: 
    - namespaceSelector:
        matchLabels:
          app: apigee
    - podSelector:
        matchLabels:
          app: apigee-runtime
          org: srinandans-apigee
          env: test
    ports:
    - protocol: TCP
      port: 20001
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: udca-metrics
spec:
  podSelector:
    matchLabels:
      app: apigee-udca
  policyTypes:
    - Ingress
  ingress:
  - from: 
    - namespaceSelector:
        matchLabels:
          app: apigee
    - podSelector:
        matchLabels:
          app: apigee-metrics  
    ports:
    - protocol: TCP
      port: 7070
